--- a/css/css.css
+++ b/css/css.css
@@ -1,8 +1,204 @@
 * {
-    font-family: 'Lexend Deca', sans-serif;
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
     outline: 0;
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+/* header */
+
+.box-header {
+    background: rgba(16, 111, 133, 1);
+    position: fixed;
+    width: 100%;
+    height: auto;
+    z-index: 1;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.cart-account {
+    display: flex;
+    gap: 30px;
+    font-weight: 600;
+}
+
+.search form {
+    position: relative;
+}
+
+.search form input {
+    padding-left: 10px;
+    width: 400px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+}
+
+.search form button {
+    position: absolute;
+    margin-top: 7px;
+    margin-left: -40px;
+    border: none;
+    background: white;
+}
+
+.store a,
+#acount,
+.fa-magnifying-glass {
+    text-decoration: none;
+    color: black;
+}
+
+.store,
+#acount {
+    border: 2px solid black;
+    padding: 3px 5px 3px 5px;
+    border-radius: 0px 10px 0px 10px;
+}
+
+.store a {
+    z-index: 1;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.fa-cart-shopping {
+    margin-top: 15px;
+}
+
+.bottom-header {
+    background: rgb(191, 185, 185);
+    border: 1px solid black;
+    height: 30px;
+}
+
+.bottom-header ul li {
+    display: inline-block;
+    font-weight: 600;
+    height: 30px;
+    transition: 0.5 ease;
+}
+
+.bottom-header ul {
+    display: flex;
+    gap: 60px;
+}
+
+ul li {
+    display: inline-block;
+    text-decoration: underline;
+}
+
+ul li :hover {
+    color: rgba(16, 111, 133, 1);
+}
+
+.categories {
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    padding: 0px 10px 0px 10px;
+    display: grid;
+}
+
+.categories ul {
+    background: white;
+    width: 112%;
+    margin: 0;
+    padding: 5px;
+    margin-left: -10px;
+    margin-top: 5px;
+    border: 1px solid rgb(121, 118, 118);
+    border-radius: 3px;
+    display: none;
+}
+
+.categories ul li {
+    display: block !important;
+    height: 29px;
+    border-bottom: 1px solid rgb(121, 118, 118);
+    border-radius: 1px;
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.categories ul li:hover {
+    padding-left: 7px;
+}
+
+.categories:hover ul {
+    display: block;
+}
+
+
+/* end header */
+
+
+/* banner */
+
+.slide img {
+    width: 100%;
+    margin-top: 83px;
+}
+
+
+/* end baner */
+
+footer {
+    display: flex;
+    gap: 50px;
+    background: rgba(22, 21, 21, 1);
+    color: white;
+    padding: 20px 0px 20px 0px;
+}
+
+.left-footer {
+    flex: .4;
+    background: rgba(16, 111, 133, 1);
+    margin-left: 50px;
+    text-align: center;
+}
+
+.content-footer {
+    flex: 1;
+}
+
+.about-us ul {
+    padding: 0;
+}
+
+.about-us ul li {
+    display: block !important;
+}
+
+.about-us ul li a {
+    color: white;
+}
+
+.about-us ul li a:hover {
+    color: rgba(16, 111, 133, 1);
+}
+
+.abate a img {
+    margin-right: 5px;
+    width: 39px;
+}
+
+.policy {
+    flex: .5;
 }
 
 form {
@@ -42,8 +238,8 @@ h4 {
 
 .product {
     display: flex;
-    box-shadow: 0 0 5px 5px rgb(135, 126, 126);
-    border-radius: 10px;
+    box-shadow: 0 0 5px 2px rgb(120, 116, 116);
+    border-radius: 5px;
 }
 
 .product .image {
@@ -71,7 +267,7 @@ h4 {
 
 .text-comment {
     height: 70px;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .img {
@@ -82,7 +278,7 @@ h4 {
 }
 
 .add-comment {
-    width: 1080px;
+    width: 1000px;
     padding-top: 20px;
 }
 
