--- a/css/style.css
+++ b/css/style.css
@@ -859,3 +859,73 @@ footer{
     font-size: 30px;
     text-decoration: underline;
   }
+  /* Trang đăng ký */
+  .signup__container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    width: 600px;
+    height: auto;
+  }
+  
+  form {
+    display: flex;
+    flex-direction:column;
+  }
+  .signup__content{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 600;
+  }
+  .signup__text {
+    margin-top: 20px;
+    font-weight: bold;
+  }
+  
+  .signup__input {
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 10px;
+    box-sizing: border-box;
+  }
+  .signup__btn{
+    text-align:justify;
+    margin: 10px;
+  }
+  .signup__btn button {
+    background-color: #106f85;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+  }
+  .signup__btn--1 {
+    margin-right: 367px; 
+  }
+  button:hover {
+    background-color: #094e63;
+  }
+  .signup__tologin{
+    text-align: center;
+    margin-top: 20px;
+  }
+.signup__span{
+    display:block;
+    white-space: nowrap;
+    text-align:end;
+    color: #106F85;
+    cursor: pointer;
+    font-size: 15px;
+}
+.signup__btn--resend{
+    color: #106F85;
+    background:none;
+    border: none;
+}
+.signup__btn--resend:hover{
+    background: none;
+}
