--- a/css/style.css
+++ b/css/style.css
@@ -780,9 +780,11 @@ footer{
     display: inline-flex;
     height: 700px;
   }
-  
-  .product__image {
+.product__footer{
     display: block;
+}
+  .product__image {
+    display: inline-block;
     margin-right: 20px;
     
   }
@@ -803,7 +805,7 @@ footer{
   
   .thumbnail {
     width: 150px;
-    height: 150px;
+    height: 110px;
     margin: 0 5px;
     cursor: pointer;
     opacity: 0.7;
@@ -929,5 +931,278 @@ footer{
     border: none;
 }
 .signup__btn--resend:hover{
+    background: none;
+}
+/* Trang đơn hàng của bạn */
+.accountorder__boxphai{
+    width: 230px;
+    height: auto;
+    margin-right: 50px;
+}
+.accountorder__boxphai a{
+    text-decoration: none;
+    color: black;
+}
+.accountorder__boxphai p{
+    margin-top: 40px;
+}
+.accountorder__boxtrai{
+    display: flex;
+    width: 900px;
+    height: auto;
+    background-color: #D9D9D9;
+}
+.accountorder__boxtrai--quantity{
+    font-weight: bold;
+    margin: 20px 400px 0px 20px;
+    font-size: 18px;
+}
+.accountorder__boxtrai--dropdown{
+    position: relative;
+    display: inline-block;
+    border: 30px;
+    margin: 20px 50px 0px 40px;
+  }
+  
+  /* Style for the dropdown button */
+  .dropbtn {
+    background-color:#c5c0c0;
+    color: black;
+    padding: 6px;
+    font-size: 16px;
+    border: 30px;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  .dropbtn span{
+    margin-right: 87px;
+  }
+  .dropbtn i{
+    font-size: 14px;
+  }
+  /* Style for the dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Style for the dropdown links */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color on hover */
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+  
+  /* Show the dropdown content when the button is clicked */
+  .accountorder__boxtrai--dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  /* Trang số địa chỉ */
+  .address__boxtrai{
+    margin-right: 600px;
+  }.address__boxtrai h3{
+    font-size: 18px;
+  }
+  .address__boxtrai button{
+    background-color: red;
+    color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+  }
+  .address__boxtrai i{
+    margin-right: 9px;
+  }
+  .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Màu nền với độ mờ */
+    z-index: 1; /* Đảm bảo nền mờ ở trên cùng */
+  }
+
+  /* Hiển thị trang con như một bảng to */
+  .subpage {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #fff;
+    z-index: 2; /* Đảm bảo trang con ở trên cùng */
+    width: 750px;
+    height: auto;
+    margin-top: 50px;
+  }.subpage__header{
+    margin-top: 10px;
+    display: flex;
+   
+  }
+  .subpage__header h2{
+    font-size: 20px;
+    margin-right: 500px;
+  }
+  .subpage__header button{
+    width: 30px; /* Kích thước của button */
+    height: 30px;
+    border-radius: 50%;
+    font-size: 16px;
+    cursor: pointer;
+    color: rgb(254, 253, 253);
+    background-color: red;
+    border: none;
+  }
+.subpage__content form label{
+    margin-top: 20px;
+}.subpage__content form input{
+    height: 40px;
+    width: 700px;
+}
+.location-select select{
+    margin-right: 1px;
+}
+.subpage__footer{
+    display: flex;
+    margin-left: 490px;
+}
+.subpage__footer--btn2{
+    margin-left: 15px;
+    padding: 5px 15px;
+    border-radius: 10px;
+    background-color: red;
+    color: white;
+    border: none;
+}
+.subpage__footer--btn1{
+    padding: 5px 15px;
+    border-radius: 10px;
+    background-color: #8B8888;
+    border: none;
+}
+.subpage__footer--btn1 a{
+    text-decoration: none;
+    color: white;
+}
+/* Trang thong tin tai khoan */
+.accinfo__boxtrai{
+    width: 900px;
+    height: auto;
+    margin: auto;
+    padding: auto;
+}
+.accinfo__box{
+    width: 250px;
+    height: 250px;
+    border-radius: 10px;
+    border: #dad7d7;
+    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+.accinfo__box--img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #c5c0c0;
+    margin: 10px 0px;
+}
+.accinfo__box h1{
+    font-size: 20px;
+    font-weight: bold;
+}
+.accinfo__box p{
+    font-size: 14px;
+    margin: 5px;
+    opacity: 0.7;
+}
+/* Trang doi mat khau tai khoan */
+.accpass__container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    width: 700px;
+    height: auto;
+  }
+  
+  .accpass__container form {
+    display: flex;
+    flex-direction:column;
+    margin: 10px;
+  }
+  .accpass__content{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 600;
+  }
+  .accpass__text {
+    margin-top: 20px;
+    font-weight: bold;
+  }
+  .accpass__container h5{
+    font-size: 16px;
+    opacity: 0.6;
+    margin-left: 10px;
+  }
+  .accpass__input {
+    padding: 10px;
+    margin: 15px 0;
+    border-radius: 10px;
+    box-sizing: border-box;
+  }
+  .accpass__btn{
+    text-align:justify;
+    margin: 10px;
+  }
+  .accpass__btn button {
+    background-color: #106f85;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+  }
+  .accpass__btn--1 {
+    margin-right: 367px; 
+  }
+  button:hover {
+    background-color: #094e63;
+  }
+  .accpass__tologin{
+    text-align: center;
+    margin-top: 20px;
+  }
+.accpass__span{
+    display:block;
+    white-space: nowrap;
+    text-align:end;
+    color: #106F85;
+    cursor: pointer;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+.accpass__btn--resend{
+    color: #106F85;
+    background:none;
+    border: none;
+}
+.accpass__btn--resend:hover{
     background: none;
 }
