--- a/css/admin.css
+++ b/css/admin.css
@@ -3,7 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+:root{
+    --color-primary:rgba(254, 184, 0, 1);
+    --color-reference:rgba(55, 14, 70, 1);
+    --color-white:rgb(240, 237, 237);
+}
+.bg-header{
+    background: var(--color-primary);
+}
 header a{
     color: black;
     text-decoration: none;
@@ -52,9 +59,10 @@ header{
 
 .controll-acount li:hover ul{
     display: block;
-    background: rgb(239, 236, 236);
+    background: rgb(252, 250, 250);
     border-radius: 10px;
     width: 130px;
+    padding-bottom: 10px;
 }
 
 .img__element{
@@ -77,9 +85,15 @@ header{
 
 ul li a{
     text-decoration: none;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 
+.acount{
+    color: black;
+}
+.item-acount a{
+    color: black;
+}
 .headline ul li a:hover{
     color: rgb(33, 108, 123);
     border-bottom:1px solid rgb(33, 108, 123);
@@ -106,7 +120,10 @@ ul li a{
 #diretory{
     border: none;
     background: inherit;
+    color: rgb(0, 0, 0);
+    font-weight: 500;
 }
+
 /* main */
 
 main {
@@ -115,27 +132,52 @@ main {
 
 .box-left{
     width:201px ;
-    height:1000vh;
-    background: rgb(255, 255, 255);
+    height:100vh;
+    background: white;
     border-left: 1px solid rgb(190, 187, 187);
     border-right: 1px solid rgb(190, 187, 187);
     position: fixed;
+    font-weight: 500;
 }
-
+.headline__boxleft{
+    text-align: center;
+    margin-bottom: 50px;
+    position: relative;
+}
 .content-box-left{
     width: 200px;
     border-left: 1px solid rgb(190, 187, 187);
     border-right: 1px solid rgb(190, 187, 187);
-    background: rgb(255, 255, 255);
+    background: white;
     padding:100px 10px 0px 10px;
     max-height: 100vh;
     overflow-y: scroll;
     position: fixed;
 }
 
+.img__acount-boxleft{
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+}
+.img-wrapper__boxleft{
+    width: 130px;
+    height: 130px;
+    position: relative;
+    margin-left: 23px;
+}
+.dot__boxleft{
+    width: 15px;
+    height: 15px;
+    background: rgb(6, 229, 6) !important;
+    border-radius: 50%;
+    position: absolute;
+    right: 20%;
+    top: 50%;
+}
 .content-box-left {
     scrollbar-width: thin; /* Đặt kích thước mỏng cho thanh cuộn */
-    scrollbar-color: #888888 #ffffff; /* Đặt màu cho thanh cuộn */
+    scrollbar-color: #888888 var(--color-reference);; /* Đặt màu cho thanh cuộn */
   }
   
   /* Cho trình duyệt Chrome */
@@ -144,11 +186,11 @@ main {
 }
   
 .content-box-left::-webkit-scrollbar-thumb {
-    background-color: #888888; /* Đặt màu cho phần thân của thanh cuộn */
+    background-color: #ddcfcf; /* Đặt màu cho phần thân của thanh cuộn */
 }
   
 .content-box-left::-webkit-scrollbar-track {
-    background-color: #ffffff; /* Đặt màu cho phần nền của thanh cuộn */
+    background: var(--color-reference); /* Đặt màu cho phần nền của thanh cuộn */
 }
 
 .radius{
@@ -176,6 +218,7 @@ main {
 .statistic-prd{
     flex: .5;
     background: white;
+    overflow: hidden;
 }
 
 .sattistic{
@@ -202,7 +245,9 @@ main {
     height: 170px;
     opacity: 0.7;
 }
-
+.users a, .orders a{
+    text-decoration: none;
+}
 .users .icon-user {
     padding: 10px;
     padding-top: 16px;
@@ -304,6 +349,53 @@ main {
 }
 
 /* ============Trang sản phẩm========== */
+.products-all{
+    background: rgb(240, 237, 237);
+    padding-bottom: 30px;
+}
+.prd-all__head-line{
+    padding-top: 100px;
+    padding-left: 210px;
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+.prds-row{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    padding-left: 210px;
+    padding-top: 30px;
+    gap: 24px;
+}
+.prd-col{
+    background: white;
+}
+.prd-col__img{
+    width: 100%;
+    height: 250px;
+    padding: 5px;
+    text-align: center;
+}
+.img-prd{
+    width: 100%;
+    height: 100%;
+}
+.prd-col__name{
+    font-weight: 500;
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+}
+.prd__price{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+.like,.prd-col__dm,.variants{
+    padding: 10px;
+}
+
+
 .function-prds{
     display: grid;
     grid-template-columns: 0.7fr 1fr;
@@ -397,4 +489,104 @@ main {
 }
 .main_dm li{
     display: inline-block;
+}
+/*================= Đăng nhập ============= */
+.admin{
+    height: 100vh;
+    background: var(--color-primary);
+    display: flex;
+    justify-content: flex-end;
+}
+.content-admin{
+    display: flex;
+
+}
+.head-line__content-admin{
+    width: 200px;
+}
+.box-center{
+    width: 400px;
+    height: 300px;
+    position: relative;
+    margin-top: 200px;
+    margin-right: 300px;
+    color: white !important;
+}
+.head__desc{
+    margin-top: 30px;
+}
+.box-right{
+    width: 30%;
+    height: 100%;
+    background: var(--color-reference);
+    position: relative;
+}
+.form-wrapper{
+    background: white;
+    height: 400px;
+    width: 400px;
+    margin-top: 50px;
+    position: absolute;
+    margin-left: 450px;
+    margin-top: 150px;
+    z-index: 1;
+    border-radius: 5px;
+}
+.form-wrapper form{
+    text-align: center;
+    display: grid;
+    gap:10px;
+}
+.form-wrapper form h3{
+    margin:20px 0px 30px 0px;
+}
+.fct-acount a{
+    text-decoration: none;
+}
+.input__content{
+    width: 90%;
+    height: 40px;
+    border: 1px solid var(--color-white);
+    background: white;
+    margin-left: 5%;
+    padding-left: 10px;
+}
+
+.btn-log-admin{
+    background: #006eff;
+}
+.btn-log-admin:hover{
+    background: #00a2ff;
+}
+.fct-acount{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+/* Thông tin admin:các thành viên */
+.acount-information{
+    width: 100%;
+    background: var(--color-white);
+    padding-left: 250px;
+    padding-top: 100px;
+}
+.img-wrapper{
+    background: white;
+    border-radius:10px;
+}
+.img__acount{
+    width: 360px;
+    height: 400px;
+    padding: 5px;
+}
+.member{
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+    margin-bottom: 32px;
+}
+.member-content{
+    background: white;
+    width: 80%;
+    padding-left: 20px;
 }
